--- a/src/main.css
+++ b/src/main.css
@@ -45,21 +45,23 @@
   color:white;
 }
 
-.content h1{
+h1{
   font-weight: 600;
   font-family: Work Sans;
+  position: relative;
+  top: 100px;
   letter-spacing: 10px;
-  font-size:60px
+  font-size: 60px;
 }
 
 
 .content h3{
   width:80%;
-  margin:100px auto 50px;
+  margin:10px auto 30px;
   font-weight:600;
   font-size: 30px;
   font-family: Work Sans;
-  line-height: 50px;  
+  line-height: 150px;  
 }
 
 .caption h4{
