--- a/src/organizer.css
+++ b/src/organizer.css
@@ -1,3 +1,16 @@
+.overlay{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
+  background-color: rgba(0,0,0,0.5); /*dim the background*/
+  display: none;
+}
+
+
+
 .content-table{
     border-collapse: collapse;
     margin-left: -30px ;
@@ -21,23 +34,20 @@
 }
 
 .content-table th{
-    border-top: none;
-    padding:15px 40px;
+  border-top: none;
+  padding:15px 40px;
 }
 .content-table td{
-    text-align: center;
-    padding:20px 30px 20px 0 ;
+  padding:15px 20px;
+  border-bottom: 1px solid #87bba2
 }
 
 .content-table tbody tr{
-    border-bottom: 1px solid #dddddd;
+  border-bottom: 1px solid #dddddd;
 }
 
 .content-table tr{
-    background-color: #e6e6e6;
-}
-.content-table tr:nth-of-type(even){
-    background-color: #fff;
+  background-color: rgba(255,255,255,0.8);
 }
 
 .divider{
@@ -192,7 +202,20 @@
   font-family: Work Sans;
   letter-spacing: 1px;
   font-size:40px;
+  margin-right: 100px;
 }
+.add-button{
+  width:100px;
+  height:100px;
+  margin-left:650px;
+  margin-top: -120px;
+  position: absolute;
+  z-index: 1000;
+}
+.add-button img{
+  width: 80%;
+}
+
 
 h1 span{
   background-color: rgba(97,97,97, 0.4);
